                                                     -*- coding: utf-8 -*-
Changes for APR 2.0.0

  *) apr_memcache: Check sockets from connection pool before using them and try
     to reconnect them if they are not usable any longer.[Ruediger Pluem]

  *) New APR_THREAD_LOCAL and apr_thread_current*() API.  [Yann Ylavic]

  *) apr_crypto_openssl: Compatibility with OpenSSL 3.  [Yann Ylavic]

  *) apr-1-config: Fix crosscompiling detection in apr-1-config. PR 66510
     [Ruediger Pluem]

  *) configure: Add --enable-sysv-shm to use SysV shared memory (shmget) if
     available. [Ruediger Pluem]

  *) configure: Prefer posix name-based shared memory over SysV IPC.
     [Jim Jagielski]

  *) configure: Add --disable-sctp argument to forcibly disable SCTP
     support, or --enable-sctp which fails if SCTP support is not
     detected.  [Lubos Uhliarik <luhliari redhat.com>, Joe Orton]

  *) apr_dbm: Add dedicated apr_dbm_get_driver() function that returns
     details of the driver selected and any error encountered. Add the
     apr_dbm_open2() function that references the driver. [Graham Leggett]

  *) apr_mmap_t members pstart, psize and poffset are used internally only
     on Windows, remove them.  [Yann Yalvic]

  *) Align apr_mmap()ing offset to a page boundary. [Yann Ylavic]

  *) APR's configure script uses AC_TRY_RUN to detect whether the return type
     of strerror_r is int. When cross-compiling this defaults to no.

     This commit adds an AC_CACHE_CHECK so users who cross-compile APR may
     influence the outcome with a configure variable. [Sebastian Kemper
     <sebastian_ml gmx net>]

  *) Add a cache check with which users who cross-compile APR
     can influence the outcome of the /dev/zero test by setting the variable
     ac_cv_mmap__dev_zero=yes [Sebastian Kemper <sebastian_ml gmx net>]

  *) apr_crypto_commoncrypto: Remove stray reference to -lcrypto that
     prevented commoncrypto being enabled. [Graham Leggett]
