@@ -58,7 +58,7 @@ dsp = libapr.dsp
 modules =
   crypto_openssl crypto_nss crypto_commoncrypto dbd_pgsql
   dbd_sqlite2 dbd_sqlite3 dbd_oracle dbd_mysql dbd_odbc
-  dbm_db dbm_gdbm dbm_ndbm
+  dbm_db dbm_gdbm dbm_ndbm dbm_lmdb
 
 # gen_uri_delim.c
 
@@ -113,3 +113,6 @@ target = dbm/apr_dbm_gdbm.la
 paths = dbm/apr_dbm_ndbm.c
 target = dbm/apr_dbm_ndbm.la
 
+[dbm_lmdb]
+paths = dbm/apr_dbm_lmdb.c
+target = dbm/apr_dbm_lmdb.la
