@@ -629,6 +629,7 @@ typedef int apr_wait_t;
  * we always have SDBM (it's in our codebase)
  */
 #define APU_HAVE_SDBM           1
+#define APU_HAVE_LMDB           0
 #define APU_HAVE_GDBM           0
 #define APU_HAVE_NDBM           0
 #define APU_HAVE_DB             0
