@@ -1,6 +1,8 @@
                                                      -*- coding: utf-8 -*-
 Changes for APR 2.0.0
 
+  *) dbm: Add LMDB driver. [Lubos Uhliarik <luhliari redhat.com>]
+
   *) apr_memcache: Check sockets from connection pool before using them and try
      to reconnect them if they are not usable any longer.[Ruediger Pluem]
 
